feat: adjust imports + create page header component

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,8 +7,10 @@
   --color-core-background: #1F1F1F;
   --color-core-border: #3D3D3D;
   --color-neutral-content-onSource: #0A0A0A;
+  --color-neutral-content-high: #CACACA;
   --color-neutral-content: #A4A4A4;
   --color-neutral-surface: #FFFFFF;
+  --color-neutral-border-high: #5D5D5D;
 
   --sizing-xxxs: 14px;
   --sizing-xxs: 16px;
