--- a/src/app/components/header-pages/header-pages.component.html
+++ b/src/app/components/header-pages/header-pages.component.html
@@ -1,7 +1,7 @@
-<div class="header-page">
-  <h1> {{ title }}</h1>
+<div class="header-page d-flex flex-wrap justify-content-between align-items-center">
+  <h1 class="col-12 col-sm-3"> {{ title }}</h1>
 
-  <div class="form-group floating-label" *ngIf="inptFilter">
+  <div class="form-group floating-label col-12 col-sm-6 col-md-5 col-lg-3" *ngIf="inptFilter">
     <input type="text" class="form-control" id="floatingInput" placeholder=" " />
     <label for="floatingInput">Pesquisar</label>
   </div>
