--- a/src/app/components/header-pages/header-pages.component.scss
+++ b/src/app/components/header-pages/header-pages.component.scss
@@ -1,7 +1,5 @@
 .header-page {
-  display: flex;
-  justify-content: space-between;
-  width: 100%;
+  margin-top: 48px;
 
   h1 {
     font-family: var(--font-family-creepster);
@@ -13,7 +11,6 @@
 
   .floating-label {
     position: relative;
-    margin-top: 1.5rem;
 
     .form-control {
       border: 1px solid var(--color-neutral-border-high);
