--- a/src/app/components/layout/layout.component.html
+++ b/src/app/components/layout/layout.component.html
@@ -1,5 +1,5 @@
 <div class="container-fluid">
-  <div class="container">
+  <div class="container col-12 col-xl-8">
     <ng-content></ng-content>
   </div>
 </div>
