--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,5 +1,5 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <div class="container-fluid d-flex justify-content-between">
+<nav class="navbar navbar-expand-lg navbar-light bg-light justify-content-center">
+  <div class="w-100 h-100 d-flex justify-content-between align-items-center nav-wrapper">
     <img class="navbar-brand" routerLink="/" src="../../../assets/imgs/logo.png"/>
 
     <div class="btn-group" role="group">
