--- a/src/app/pages/favorites/favorites.component.html
+++ b/src/app/pages/favorites/favorites.component.html
@@ -1,1 +1,6 @@
 <app-header-pages title="Favoritos"></app-header-pages>
+<app-list-empty
+  title="Parece que você ainda não tem favoritos"
+  subtitle="Volte à página inicial e escolha os melhores para você."
+  [buttonHome]="true"
+/>
