--- a/src/app/components/layout/layout.component.html
+++ b/src/app/components/layout/layout.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div class="container-fluid d-flex flex-column">
   <div class="container col-12 col-xl-8">
     <ng-content></ng-content>
   </div>
