--- a/src/app/components/list-empty/list-empty.component.html
+++ b/src/app/components/list-empty/list-empty.component.html
@@ -1,3 +1,8 @@
-<div class="container w-75">
+<div
+  class="container col-9 col-lg-10 d-flex flex-column justify-content-center align-items-center"
+>
+  <h2>{{ title }}</h2>
+  <p>{{ subtitle }}</p>
 
+  <app-button variant="filled" routerLink="/" *ngIf="buttonHome" >Voltar para início</app-button>
 </div>
