feat: finally project

--- a/src/app/components/header-pages/header-pages.component.html
+++ b/src/app/components/header-pages/header-pages.component.html
@@ -16,4 +16,11 @@
     />
     <label for="floatingInput" class="position-absolute">Pesquisar</label>
   </div>
+
+  <app-button
+    *ngIf="clearFavoritesBtn"
+    variant="outline"
+    (click)="(handleClearFavorites())"
+    >Limpar Favoritos</app-button
+  >
 </div>
