--- a/src/app/components/button/button.component.scss
+++ b/src/app/components/button/button.component.scss
@@ -14,5 +14,11 @@
     background-color: transparent;
     color: var(--color-core-content-low);
     border: 1px solid var(--color-core-border);
+
+    &:hover {
+      background-color: var(--color-core-background);
+      border-color: var(--color-neutral-surface);
+      color: var(--color-core-content);
+    }
   }
 }
