--- a/src/app/components/card-character/card-character.component.html
+++ b/src/app/components/card-character/card-character.component.html
@@ -1,9 +1,26 @@
 <div class="card">
-  <i class="bi bi-heart position-absolute"></i>
-  <img [src]="character?.image" class="card-img-top" alt="...">
+  <i
+    class="bi bi-heart-fill position-absolute"
+    *ngIf="isFavorite(character?.id)"
+    (click)="handleRemoveFavorite(character?.id)"
+  ></i>
+
+  <i
+    class="bi bi-heart position-absolute"
+    *ngIf="!isFavorite(character?.id)"
+    (click)="handleAddFavorite(character?.id)"
+  ></i>
+
+  <img [src]="character?.image" class="card-img-top" alt="..." />
 
   <div class="card-body">
-    <h5 class="card-title">{{ character?.name }}</h5>
-    <p class="card-text"> {{ character?.species }}</p>
+    <h5
+      class="card-title text-truncate"
+      style="max-width: 100%"
+      [title]="character?.name"
+    >
+      {{ character?.name }}
+    </h5>
+    <p class="card-text">{{ character?.species }}</p>
   </div>
 </div>
