--- a/src/app/components/card-character/card-character.component.scss
+++ b/src/app/components/card-character/card-character.component.scss
@@ -11,6 +11,11 @@
     top: 8px;
     font-size: 20px;
     cursor: pointer;
+    color: var(--color-core-content);
+  }
+
+  .bi-heart-fill{
+    color: var(--color-core-foreground);
   }
 
   &:hover {
