--- a/src/app/pages/favorites/favorites.component.html
+++ b/src/app/pages/favorites/favorites.component.html
@@ -1,6 +1,39 @@
-<app-header-pages title="Favoritos"></app-header-pages>
-<app-list-empty
+<app-header-pages title="Favoritos" [clearFavoritesBtn]="favorites.length > 0"></app-header-pages>
+
+<div *ngIf="isLoading; else content">
+  <div class="container d-flex justify-content-center align-items-center">
+    <div class="spinner-border text-light" role="status">
+      <span class="visually-hidden text-white">Carregando...</span>
+    </div>
+  </div>
+</div>
+
+<ng-template #content>
+  <div *ngIf="favorites.length > 0; else noResults">
+    <app-list-characters
+      [charactersList]="favoritesList"
+    />
+  </div>
+
+  <ng-template #noResults>
+    <app-list-empty
+    title="Parece que você ainda não tem favoritos"
+    subtitle="Volte à página inicial e escolha os melhores para você."
+    [buttonHome]="true"
+    />
+  </ng-template>
+</ng-template>
+
+<!-- <app-list-empty
+  *ngIf="(favorites$ | async)?.length === 0"
   title="Parece que você ainda não tem favoritos"
   subtitle="Volte à página inicial e escolha os melhores para você."
   [buttonHome]="true"
 />
+
+<app-list-characters
+  *ngIf="(favorites$ | async) !== undefined"
+  [charactersList]="favoritesList"
+/> -->
+
+
