fix: Deploy adjustments

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -7,7 +7,7 @@
     <img
       class="navbar-brand"
       routerLink="/"
-      src="../../../assets/imgs/logo.png"
+      src="./assets/imgs/logo.png"
     />
 
     <div class="btn-group" role="group">
