--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -8,6 +8,14 @@
 
   .nav-wrapper{
     max-width: 1830px;
+
+    .btn-menu-collapse {
+      border-color: var(--color-neutral-content);
+
+      .navbar-toggler-icon{
+        color: var(--color-neutral-content);
+      }
+    }
   }
 
   * {
@@ -56,20 +64,40 @@
     }
   }
 
-  .badge {
-    border: 1px solid var(--color-core-border);
-    font-size: 10px;
-    width: var(--sizing-s);
-    height: var(--sizing-s);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: var(--color-neutral-surface);
-    color: var(--color-neutral-content-onSource);
 
-    &.is-active {
-      background-color: var(--color-core-foreground);
-      color: var(--color-neutral-content);
+}
+
+.badge {
+  border: 1px solid var(--color-core-border);
+  font-size: 10px;
+  width: var(--sizing-s);
+  height: var(--sizing-s);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--color-neutral-surface);
+  color: var(--color-neutral-content-onSource);
+
+  &.is-active {
+    background-color: var(--color-core-foreground);
+    color: var(--color-neutral-content);
+  }
+}
+
+
+.offcanvas {
+  background-color: var(--color-core-background);
+
+  .btn-close{
+    filter: invert(100%);
+  }
+
+  button {
+    border-color: var(--color-core-border);
+    color: var(--color-neutral-content);
+
+    &:hover {
+      background-color: var(--color-core-border);
     }
   }
 }
