--- a/src/app/components/list-empty/list-empty.component.html
+++ b/src/app/components/list-empty/list-empty.component.html
@@ -4,5 +4,5 @@
   <h2>{{ title }}</h2>
   <p>{{ subtitle }}</p>
 
-  <app-button variant="filled" routerLink="/" *ngIf="buttonHome" >Voltar para início</app-button>
+  <app-button variant="filled" routerLink="/" *ngIf="buttonHome" >{{ 'LIST-EMPTY.FAVORITES.GO-HOME-BUTTON' | translate }}</app-button>
 </div>
