--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,9 +1,13 @@
-<app-header-pages title="Início" [inptSearch]="true" (searchCharacter)="handleSearch($event)"></app-header-pages>
+<app-header-pages
+[title]="'HEADER-PAGE.HOME' | translate "
+  [inptSearch]="true"
+  (searchCharacter)="handleSearch($event)"
+></app-header-pages>
 
 <div *ngIf="isLoading && currentPage == 1; else content">
   <div class="container d-flex justify-content-center align-items-center">
     <div class="spinner-border text-light" role="status">
-      <span class="visually-hidden text-white">Carregando...</span>
+      <span class="visually-hidden text-white">{{ 'LOADGIN' | translate }}</span>
     </div>
   </div>
 </div>
@@ -18,8 +22,8 @@
 
   <ng-template #noResults>
     <app-list-empty
-      title="Nada foi encontrado"
-      subtitle="Tente realizar uma nova busca."
+      [title]="'LIST-EMPTY.HOME.MESSAGE' | translate"
+      [subtitle]="'LIST-EMPTY.HOME.SUB-MESSAGE' | translate"
     />
   </ng-template>
 </ng-template>
