--- a/src/app/components/header-pages/header-pages.component.html
+++ b/src/app/components/header-pages/header-pages.component.html
@@ -1,5 +1,5 @@
 <div
-  class="header-page d-flex flex-wrap justify-content-between align-items-center"
+  class="header-page d-flex flex-wrap justify-content-center justify-content-sm-between align-items-center"
 >
   <h1 class="col-12 col-sm-3 text-center text-sm-start">{{ title }}</h1>
 
@@ -14,13 +14,13 @@
       placeholder=" "
       (input)="onChange($event)"
     />
-    <label for="floatingInput" class="position-absolute">Pesquisar</label>
+    <label for="floatingInput" class="position-absolute">{{ 'HEADER-PAGE.SEARCH' |  translate }}</label>
   </div>
 
   <app-button
     *ngIf="clearFavoritesBtn"
     variant="outline"
     (click)="(handleClearFavorites())"
-    >Limpar Favoritos</app-button
+    >{{ 'HEADER-PAGE.CLEAR-FAVORITES' |  translate }}</app-button
   >
 </div>
