--- a/src/app/components/button/button.component.scss
+++ b/src/app/components/button/button.component.scss
@@ -12,13 +12,13 @@
 
   &.btn-outline {
     background-color: transparent;
-    color: var(--color-core-content-low);
-    border: 1px solid var(--color-core-border);
+    color: var(--color-core-content);
+    border: 1px solid var(--color-core-content);
 
     &:hover {
       background-color: var(--color-core-background);
-      border-color: var(--color-neutral-surface);
-      color: var(--color-core-content);
+      border-color: var(--color-core-content-low);
+      color: var(--color-core-content-low);
     }
   }
 }
