--- a/src/app/components/card-character/card-character.component.scss
+++ b/src/app/components/card-character/card-character.component.scss
@@ -5,6 +5,7 @@
   border-radius: var(--border-radius-s);
   background-color: var(--color-core-foreground);
   transition: all 0.2s ease-in-out;
+  cursor: pointer;
 
   .bi {
     right: 14.5px;
