fix: remove function not implements

--- a/src/app/components/list-characters/list-characters.component.html
+++ b/src/app/components/list-characters/list-characters.component.html
@@ -7,7 +7,7 @@
     (scroll)="onScroll($event)"
   >
     <app-card-character
-      *ngFor="let character of list; trackBy: trackById"
+      *ngFor="let character of list;"
       [character]="character"
       (openCharacter)="openModal(character)"
     />
