fix: adjust modal details open + refator logic components

--- a/src/app/components/list-characters/list-characters.component.html
+++ b/src/app/components/list-characters/list-characters.component.html
@@ -7,7 +7,7 @@
     (scroll)="onScroll($event)"
   >
     <app-card-character
-      *ngFor="let character of list;"
+      *ngFor="let character of list"
       [character]="character"
       (openCharacter)="openModal(character)"
     />
@@ -18,13 +18,11 @@
       [title]="emptyTitle"
       [subtitle]="emptySubtitle"
       [buttonHome]="true"
-
     />
   </ng-template>
 </ng-template>
 
 <app-modal-character
-  *ngIf="selectedCharacter"
   [character]="selectedCharacter"
   (closeModal)="closeModal()"
 ></app-modal-character>
