fix: Fix in empty list component bug

--- a/src/app/components/list-characters/list-characters.component.html
+++ b/src/app/components/list-characters/list-characters.component.html
@@ -17,7 +17,7 @@
     <app-list-empty
       [title]="emptyTitle"
       [subtitle]="emptySubtitle"
-      [buttonHome]="true"
+      [buttonHome]="buttonHome"
     />
   </ng-template>
 </ng-template>
